@@ -1,6 +1,7 @@
 2.6.0 2024-09-19
         - Add -o parameter.
         - Add support for inline dependency relations.
+        - Add support for --auto-textsigle.
 
 2.5.0 2024-01-24
         - Upgrade minimal Perl version to 5.36 to improve
